# publisher-demo-rag

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.backup  README.md  SPECIFICATION.md  docker-compose.yml  handoff.md  pyproject.toml  test_age_labels.py  test_guardrails.py  test_metadata_logging.py  test_metadata_structure.py
.do/: app.yaml
data/: articles.db  quadd_articles.db
data/chroma_db/: chroma.sqlite3
docs/: API.md  CHAT_SERVER.md  CONFIGURATION.md  FRONTEND.md  GRADIO_FRONTEND.md  GUARDRAILS.md  JS_FRONTEND.md  METADATA_LOGGING.md  MODULES.md  README.md  SCRIPTS.md  WIDGET.md  WIDGET_AUTH_DESIGN.md  v2_morning_handoff_2026-04-15.md
docs/specs/: AD_INTEGRATION_GUIDELINES.md  AGENT_ARCHITECTURE.md  DATA_STRUCTURE.md  DEPLOYMENT.md  FRONTEND_ARCHITECTURE.md  SPACES_STRATEGY.md
scripts/: analyze_conversations.py  batch_vision.py  download_samples.py  ingest.py  ingest_ads.py  ingest_edition.py  ingest_events.py  ingest_quadd_articles.py  init.sh  init_db.py  load_sample_ads.py  load_sample_events.py  process_edition.py  reindex_ads.py  reindex_articles.py  reset_ads.py  reset_db.py  run_admin.sh  seed_articles.py  seed_articles.sql  setup_spaces_lifecycle.py  smoke_billing_gate.py  smoke_test_pin_lifecycle.py  smoke_test_pins.py  smoke_w1_billing.py  smoke_w2_pmc.py  test_openai_vision.py  upload_to_spaces.py  verify_voice_config.py
src/: ad_ingestion.py  ad_processing.py  admin_dashboard.py  chatbot.py  content_orchestrator.py  edition_ingestion.py  ingestion.py  intent_router.py  metadata_extractor.py  metadata_extractor_ads.py  metadata_extractor_events.py  newspaper_parser.py  prompts.py  query_engine.py  query_router.py  query_transformer.py  search_agent.py  search_tools.py
src/admin_frontend/: __init__.py  routes.py
src/admin_frontend/templates/: admin.html  billing_detail.html  costs.html  review.html  (+3 more)
src/business_frontend/: __init__.py  auth.py  routes.py
src/chat_frontend/: __init__.py  routes.py
src/core/: __init__.py  config.py  database.py  vector_store.py
src/mock_integrations/: __init__.py  routes.py
src/modules/: __init__.py
src/public_frontend/: __init__.py  routes.py
static/: chat-widget.js
static/podcasts/: 136.m4a
tests/: retrieval_eval.py  test_ad_processing.py  test_business_dashboard.py  test_intent_router.py  test_phase0.py  test_reindex.py
(+82 files in other folders)
