[project]
name = "publisher-rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
# Amplafai runtime deps only. The RAG/ingestion/vision stack
# (chromadb, gradio, llama-index, sentence-transformers, torch, pymupdf,
# pdfplumber, feedparser, beautifulsoup4, striprtf, openai, Pillow, boto3)
# was dropped: nothing in the surviving import graph uses it (verified by
# a clean `create_app()` boot). fastapi/uvicorn/python-multipart used to
# come transitively via gradio — now declared explicitly.
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "bcrypt>=4.1.0",
    "itsdangerous>=2.1.0",
    "anthropic>=0.74.1",
    "stripe>=11.0.0",
    "httpx>=0.27.0",
    # W2.2 — voice interview stack. LiveKit Agents had a major API break
    # at 1.0; lower bounds are pinned to the v1 line. If `uv sync` resolves
    # something incompatible, refresh the Day 0 SDK spike before debugging.
    "livekit-api>=1.0.0",
    "livekit-agents>=1.0.0",
    "livekit-plugins-anthropic>=1.0.0",
    "livekit-plugins-deepgram>=1.0.0",
    "livekit-plugins-cartesia>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
